	- GetDevolvedEntity
* Level:
	- Added overloads for CanPlaceRoom(AtDoor) and FindValidRoomPlacementLocations that accept a RoomShape and DoorMask instead of a RoomConfigRoom.
* PlayerManager:
	- GetRandomCollectibleOwner
	- GetRandomTrinketOwner
* HUD:
	- GetStackedStreakSprite
	- GetPlayerStreakSprite
* PlayerHUD:
	- GetIndex
	- GetLayout
* Room:
	- TriggerOutput(RoomEventOutput GroupIdx)
* ModCallbacks:
	- MC_PRE_PLAYER_POCKET_ITEMS_SWAP(EntityPlayer player)
		Triggers when the player swaps their pocket items using the action drop button (even if they are empty).
		Return true to cancel pocket item swap.
	- MC_PRE_TRIGGER_BED_SLEEP_EFFECT(EntityPlayer player)
		Triggers if "SleepFillHP" item overlay sprite's event is triggered, and before the hearts addition is applied.
		Return true to cancel vanilla behavior.
	- MC_PRE_BED_SLEEP(EntityPlayer player, EntityPickup bed)
		Triggers on bed collision and before playing sleep sequence.
		Return true to cancel vanilla behavior.
	- MC_PRE_ENTITY_SET_COLOR(Entity entity, int duration, int priority, bool fadeOut, bool share)
		Fires when Entity:SetColor is called
		Takes an EntityType as its optional argument. 
		Return a color to override the color. The overridden color is passed into MC_POST_ENTITY_SET_COLOR.
		Return false to cancel the color change. Prevents MC_POST_ENTITY_SET_COLOR from firing.
		This only fires for `Entity:SetColor` and does not fire when changing the entity's color directly.
	- MC_POST_ENTITY_SET_COLOR(Entity entity, int duration, int priority, bool fadeOut, bool share)
		Fires after an entity's color is changed via Entity:SetColor
		This only fires for `Entity:SetColor` and does not fire when changing the entity's color directly.
	- MC_POST_PLAYER_TRIGGER_ROOM_CLEAR
		Previously missing counterpart to MC_PRE_PLAYER_TRIGGER_ROOM_CLEAR
	- MC_GET_STATUS_EFFECT_TARGET(Entity entity)
		Fires when an Entity is about to recieve a status effect
		Takes EntityType as its optional argument.