@@ -164,6 +164,11 @@ TypeInfo vector_ModEntryPointer {
     Align 4;
 };
 
+TypeInfo vector_ModManager_CharacterMap {
+    Size 12;
+    Align 4;
+};
+
 TypeInfo std_list_ModReference {
     Size 8;
     Align 4;
