@@ -61,6 +61,7 @@ typedef std::vector<TemporaryEffect> vector_TemporaryEffect;
 typedef std::vector<LevelGenerator_Room> vector_LevelGenRoom;
 typedef std::string std_string;
 typedef std::vector<ModEntry*> vector_ModEntryPointer;
+typedef std::vector<ModManager_CharacterMap> vector_ModManager_CharacterMap;
 typedef std::list<ModReference> std_list_ModReference;
 typedef std::deque<std::string> deque_string;
 typedef std::vector<int> std_vector_int;
