@@ -34,3 +34,11 @@ struct ModManager depends (ModEntry) {
 	vector_ModEntryPointer _mods : 0x0;
 	int _modBanStatus : 0x2025c;
 } : 0x20260;
+
+struct ModManager_CharacterMap {
+	int normal : 0x0;
+	int tainted : 0x4;
+} : 0x8;
+
+"a1(????????)0570ffffff":
+reference vector_ModManager_CharacterMap g_ModCharacterMap;
